--- a/index.html
+++ b/index.html
@@ -10,20 +10,20 @@
   <link rel="alternate" href="https://emceevictoriatan.com/index-zh.html" hreflang="zh-Hans">
   <link rel="alternate" href="https://emceevictoriatan.com/" hreflang="x-default">
   <link rel="icon" type="image/webp" href="assets/logos/VT.webp" />
-  <link rel="preload" as="image" href="/assets/hero.webp" fetchpriority="high">
+  <link rel="preload" as="image" href="/assets/hero1.webp" fetchpriority="high">
 
 <!-- Open Graph / Facebook -->
 <meta property="og:type" content="website">
 <meta property="og:title" content="Victoria Tan | Professional Malaysia Emcee">
 <meta property="og:description" content="Trusted Malaysia emcee with over a decade of experience in weddings, corporate events, and protocol ceremonies. Bilingual (English, Chinese, Malay).">
 <meta property="og:url" content="https://emceevictoriatan.com/">
-<meta property="og:image" content="https://emceevictoriatan.com/assets/hero.webp">
+<meta property="og:image" content="https://emceevictoriatan.com/assets/hero1.webp">
 
 <!-- Twitter -->
 <meta name="twitter:card" content="summary_large_image">
 <meta name="twitter:title" content="Victoria Tan | Malaysia Emcee & Event Host">
 <meta name="twitter:description" content="Victoria Tan — Professional Emcee in Malaysia for weddings, corporate events, protocol ceremonies & commercial shoots.">
-<meta name="twitter:image" content="https://emceevictoriatan.com/assets/hero.webp">
+<meta name="twitter:image" content="https://emceevictoriatan.com/assets/hero1.webp">
 
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
@@ -361,7 +361,7 @@
         <div class="grid lg:grid-cols-12 gap-8 items-end">
           <div class="lg:col-span-7">
             <!-- Replace image -->
-   <img src="/assets/hero.webp" alt="Victoria Tan emceeing a corporate gala in Kuala Lumpur — trilingual host"
+   <img src="/assets/hero1.webp" alt="Victoria Tan emceeing a corporate gala in Kuala Lumpur — trilingual host"
      class="w-full object-cover object-center rounded-lg"
      width="1600" height="900" decoding="async" fetchpriority="high">
           </div>
@@ -595,7 +595,7 @@
     <div class="lg:col-span-7 order-1 lg:order-2">
       <!-- Replace image -->
      <img
-  src="assets/2ndbg.webp?v=1"
+  src="assets/2ndbg2.webp?v=1"
   alt="Backstage / second main"
   class="w-full object-cover rounded-xl"
   loading="lazy"
