--- a/index.html
+++ b/index.html
@@ -1287,26 +1287,7 @@ const portfolioConfig = {
     base: 'assets/portfolio/events/event-',
     label: 'EVENT',
     titles: [
-      "Royal Protocol Ceremony",
-      "Corporate Gala Night",
-      "Grand Product Launch",
-      "Ministry Press Conference",
-      "Awards & Recognition Night",
-      "VIP Luncheon",
-      "Cultural Festival Opening",
-      "Ribbon-Cutting Ceremony",
-      "National Day Dinner",
-      "International Summit",
-      "Brand Anniversary Gala",
-      "Leadership Townhall",
-      "Investor Briefing",
-      "Conference Keynote",
-      "Alumni Homecoming Dinner",
-      "Media Preview Event",
-      "Fashion & Lifestyle Showcase",
-      "Charity Fundraising Gala",
-      "Year-End Appreciation Dinner",
-      "Exclusive Partner Reception"
+    "Event 1","Event 2"
     ]
   },
   tv: {
