--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Victoria Tan | Professional Malaysia Emcee for Weddings, Corporate & Events</title>
-<meta name="description" content="Hire Victoria Tan, a professional Malaysia emcee with 12+ years of experience hosting weddings, corporate events, protocol ceremonies, and commercial shoots. Bilingual in English · 中文 · Malay.">
-<meta name="keywords" content="Malaysia Emcee, Professional Emcee Malaysia, Wedding Emcee Malaysia, Corporate Emcee KL, Event Host Malaysia, Bilingual Emcee, Victoria Tan">
+  <title>Victoria Tan | Professional Malaysian emcee for Weddings, Corporate & Events</title>
+<meta name="description" content="Hire Victoria Tan, a professional Malaysian emcee with 12+ years of experience hosting weddings, corporate events, protocol ceremonies, and commercial shoots. Bilingual in English · 中文 · Malay.">
+<meta name="keywords" content="Malaysian emcee, Professional Emcee Malaysia, Wedding Emcee Malaysia, Corporate Emcee KL, Event Host Malaysia, Bilingual Emcee, Victoria Tan">
 <meta name="author" content="Victoria Tan">
   <link rel="canonical" href="https://emceevictoriatan.com/">
   <link rel="alternate" href="https://emceevictoriatan.com/" hreflang="en">
@@ -19,14 +19,14 @@
 <link rel="preload" as="image" href="/assets/logos/6.svg">
 <!-- Open Graph / Facebook -->
 <meta property="og:type" content="website">
-<meta property="og:title" content="Victoria Tan | Professional Malaysia Emcee">
-<meta property="og:description" content="Trusted Malaysia emcee with over a decade of experience in weddings, corporate events, and protocol ceremonies. Bilingual (English, Chinese, Malay).">
+<meta property="og:title" content="Victoria Tan | Professional Malaysian emcee">
+<meta property="og:description" content="Trusted Malaysian emcee with over a decade of experience in weddings, corporate events, and protocol ceremonies. Bilingual (English, Chinese, Malay).">
 <meta property="og:url" content="https://emceevictoriatan.com/">
 <meta property="og:image" content="https://emceevictoriatan.com/assets/hero1.webp">
 
 <!-- Twitter -->
 <meta name="twitter:card" content="summary_large_image">
-<meta name="twitter:title" content="Victoria Tan | Malaysia Emcee & Event Host">
+<meta name="twitter:title" content="Victoria Tan | Malaysian emcee & Event Host">
 <meta name="twitter:description" content="Victoria Tan - Professional Emcee in Malaysia for weddings, corporate events, protocol ceremonies & commercial shoots.">
 <meta name="twitter:image" content="https://emceevictoriatan.com/assets/hero1.webp">
 
@@ -50,7 +50,7 @@
   "sameAs": [
     "https://www.instagram.com/victoriathings"
   ],
-  "description": "Victoria Tan is a professional Malaysia emcee with 12+ years of experience hosting weddings, corporate events, protocol ceremonies, and commercial shoots. Bilingual in English, Chinese, and Malay."
+  "description": "Victoria Tan is a professional Malaysian emcee with 12+ years of experience hosting weddings, corporate events, protocol ceremonies, and commercial shoots. Bilingual in English, Chinese, and Malay."
 }
 </script>
   <script src="https://cdn.tailwindcss.com"></script>
@@ -412,7 +412,7 @@
 </h1>
 
         <p class="mt-4 text-base md:text-lg tracking-widest text-wordcolor/80 font-medium">
-  Victoria Tan - Professional Malaysia Emcee
+  Victoria Tan - Professional Malaysian emcee
 </p>
 
 <p class="mt-6 text-lg md:text-xl text-ink leading-relaxed font-header">
@@ -955,7 +955,7 @@
     <!-- Weddings -->
     <div class="mt-14 border-t border-line pt-6">
       <div class="flex items-baseline justify-between">
-        <h3 class="font-semibold text-xl text-wordcolor">Lifestyles & Weddings</h3>
+        <h3 class="font-semibold text-xl text-wordcolor">Weddings & Festivals</h3>
         <p class="text-sm text-zinc-700">Elegant, warm, bilingual flow for your big day</p>
       </div>
       <div class="swiper mt-4" id="wedding-swiper">
