--- a/index.html
+++ b/index.html
@@ -412,7 +412,7 @@
 </h1>
 
         <p class="mt-4 text-base md:text-lg tracking-widest text-wordcolor/80 font-medium">
-  Victoria Tan - Professional Malaysian emcee
+  Victoria Tan - Professional Malaysian TV Host & Emcee
 </p>
 
 <p class="mt-6 text-lg md:text-xl text-ink leading-relaxed font-header">
