--- a/index.html
+++ b/index.html
@@ -138,8 +138,8 @@
   </div>
 
       <a class="w-full sm:w-auto whitespace-nowrap py-2 px-3 inline-flex justify-center items-center gap-x-2 text-sm font-medium rounded-full border border-transparent 
-      bg-wordcolor text-white hover:bg-gray-900 focus:outline-hidden focus:bg-blue-700 disabled:opacity-50 disabled:pointer-events-none" href="#contact">
-        BOOK
+      bg-wordcolor text-white hover:bg-gray-900 focus:outline-hidden focus:bg-blue-700 disabled:opacity-50 disabled:pointer-events-none" href="https://www.instagram.com/victoriathings" target="_blank">
+        INSTAGRAM
       </a>
 
       <div class="md:hidden  pr-2">
@@ -168,7 +168,6 @@
         <a class="py-0.5 md:py-3 px-4 md:px-1 border-s-2 md:border-s-0 md:border-b-2 border-wordcolor text-wordcolor-500 hover:text-gray-800 focus:outline-hidden" href="#about">ABOUT</a>
         <a class="py-0.5 md:py-3 px-4 md:px-1 border-s-2 md:border-s-0 md:border-b-2 border-wordcolor text-wordcolor-500 hover:text-gray-800 focus:outline-hidden" href="#portfolio">PORTFOLIO</a>
           <a class="py-0.5 md:py-3 px-4 md:px-1 border-s-2 md:border-s-0 md:border-b-2 border-wordcolor text-wordcolor-500 hover:text-gray-800 focus:outline-hidden " href="#services">SERVICES</a>
-            <a class="py-0.5 md:py-3 px-4 md:px-1 border-s-2 md:border-s-0 md:border-b-2 border-wordcolor text-wordcolor-500 hover:text-gray-800 focus:outline-hidden" href="https://www.instagram.com/victoriathings" target="_blank">INSTAGRAM</a>
               <a class="py-0.5 md:py-3 px-4 md:px-1 border-s-2 md:border-s-0 md:border-b-2 border-wordcolor text-wordcolor-500 hover:text-gray-800 focus:outline-hidden" href="#contact">CONTACT</a>
       </div>
     </div>
