--- a/index-zh.html
+++ b/index-zh.html
@@ -6,8 +6,8 @@
   <meta name="viewport" content="width=device-width,initial-scale=1" />
 
   <title>Victoria Tan | 马来西亚专业主持人（婚礼・企业・活动）</title>
-  <meta name="description" content="聘请马来西亚专业主持人 Victoria Tan，拥有 12 年以上婚礼、企业活动、礼宾仪式与商业拍摄主持经验。中英马三语流利。">
-  <meta name="author" content="Victoria Tan">
+  <meta name="description" content="聘请马来西亚专业主持人 Victoria Tan 陈苛敏，拥有 12 年以上婚礼、企业活动、礼宾仪式与商业拍摄主持经验。中英马三语流利。">
+  <meta name="author" content="Victoria Tan 陈苛敏">
 
   <!-- Canonical / Hreflang -->
   <link rel="canonical" href="https://emceevictoriatan.com/index-zh.html" />
@@ -20,8 +20,8 @@
 
   <!-- Open Graph -->
   <meta property="og:type" content="website">
-  <meta property="og:site_name" content="Emcee Victoria Tan">
-  <meta property="og:title" content="Victoria Tan | 马来西亚专业主持人">
+  <meta property="og:site_name" content="Emcee Victoria Tan 陈苛敏">
+  <meta property="og:title" content="Victoria Tan 陈苛敏 | 马来西亚电视主持人 · 专业活动主持人">
   <meta property="og:description" content="值得信赖的马来西亚主持人，深耕婚礼、企业活动与礼宾仪式。中英马三语流利（EN / 中文 / BM）。">
   <meta property="og:url" content="https://emceevictoriatan.com/index-zh.html">
   <meta property="og:image" content="https://emceevictoriatan.com/assets/og/hero1.jpg">
@@ -30,7 +30,7 @@
 
   <!-- Twitter -->
   <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:title" content="Victoria Tan | 马来西亚专业主持人">
+  <meta name="twitter:title" content="Victoria Tan 陈苛敏 | 马来西亚电视主持人 · 专业活动主持人">
   <meta name="twitter:description" content="婚礼、企业活动、礼宾仪式与商业拍摄专业主持。">
   <meta name="twitter:image" content="https://emceevictoriatan.com/assets/og/hero1.jpg">
 
@@ -121,8 +121,8 @@
           <a href="index-zh.html" data-lang="zh" class="px-2.5 py-1.5 text-xs rounded-full border border-line hover:bg-whisper transition whitespace-nowrap">中文</a>
         </div>
 
-        <a class="w-full sm:w-auto whitespace-nowrap py-2 px-3 inline-flex justify-center items-center gap-x-2 text-sm font-medium rounded-full border border-transparent bg-wordcolor text-white hover:bg-gray-900 focus:outline-hidden" href="#contact">
-          预约档期
+        <a class="w-full sm:w-auto whitespace-nowrap py-2 px-3 inline-flex justify-center items-center gap-x-2 text-sm font-medium rounded-full border border-transparent bg-wordcolor text-white hover:bg-gray-900 focus:outline-hidden" href="https://www.instagram.com/victoriathings" target="_blank">
+          INSTAGRAM
         </a>
 
         <div class="md:hidden pr-2">
@@ -147,7 +147,6 @@
           <a class="py-0.5 md:py-3 px-4 md:px-1 border-s-2 md:border-s-0 md:border-b-2 border-wordcolor" href="#about">关于</a>
           <a class="py-0.5 md:py-3 px-4 md:px-1 border-s-2 md:border-s-0 md:border-b-2 border-wordcolor" href="#portfolio">作品集</a>
           <a class="py-0.5 md:py-3 px-4 md:px-1 border-s-2 md:border-s-0 md:border-b-2 border-wordcolor" href="#services">服务项目</a>
-          <a class="py-0.5 md:py-3 px-4 md:px-1 border-s-2 md:border-s-0 md:border-b-2 border-wordcolor" href="https://www.instagram.com/victoriathings" target="_blank">Instagram</a>
           <a class="py-0.5 md:py-3 px-4 md:px-1 border-s-2 md:border-s-0 md:border-b-2 border-wordcolor" href="#contact">联系</a>
         </div>
       </div>
@@ -165,7 +164,7 @@
           <div class="lg:col-span-5 pb-2 group">
             <h1 class="text-5xl md:text-7xl font-bolder tracking-tight text-wordcolor leading-tight">
               <span class="block">你的舞台，</span>
-              <span class="block pl-[2ch] md:pl-0">
+              <span class="block pl-[1ch] md:pl-0">
                 <span class="inline-flex items-center gap-2">
                   <span>我的声音。</span>
                   <img src="assets/microphone2.svg" alt="" aria-hidden="true" width="72" height="72" class="inline-block align-middle opacity-90">
@@ -178,7 +177,8 @@
             </p>
 
             <p class="mt-6 text-lg md:text-xl text-ink leading-relaxed font-header">
-              拥有 <span class="font-semibold">12 年以上专业主持经验</span>，从礼宾仪式、企业发布会到婚礼与现场演出，温暖大方、表达清晰，让每一段故事都被优雅呈现。<span class="italic">你的故事，你的庆典，由我的声音更显难忘。</span>
+              拥有 <span class="font-semibold">12 年以上专业主持经验</span>，从礼宾仪式、企业发布会到品牌盛典与现场演出，也涵盖婚礼主持，以自信而不失温暖的台风，真诚而优雅的表达，让每一段故事都被细腻呈现，为每一场仪式与发布会赋予独特格调。
+              <span class="italic">你的品牌与故事，将在我的声音中熠熠生辉。</span>
             </p>
           </div>
         </div>
@@ -240,7 +240,7 @@
               </span>
               <div>
                 <h3 class="font-semibold text-wordcolor">三语主持（中 / 英 / 马）</h3>
-                <p class="mt-1.5 text-zinc-700 text-sm leading-relaxed">可按观众与议程无缝切换语言——包容、自然又具感染力。</p>
+                <p class="mt-1.5 text-zinc-700 text-sm leading-relaxed">可按观众与议程无缝切换语言——包容、自然又具感染力。通晓福建话，听懂广东话，会基本的广东话与潮州话交流。</p>
               </div>
             </div>
           </article>
@@ -255,7 +255,7 @@
               </span>
               <div>
                 <h3 class="font-semibold text-wordcolor">国际舞台经验</h3>
-                <p class="mt-1.5 text-zinc-700 text-sm leading-relaxed">足迹涵盖新加坡、中国、泰国、马来西亚与印尼——文化敏锐、礼仪得体。</p>
+                <p class="mt-1.5 text-zinc-700 text-sm leading-relaxed">足迹涵盖马来西亚、中国、泰国、印尼与新加坡-文化敏锐、礼仪得体</p>
               </div>
             </div>
           </article>
@@ -322,10 +322,10 @@
         <div class="lg:col-span-5 order-2 lg:order-1">
           <h2 class="text-3xl md:text-4xl font-extrabold text-wordcolor tracking-tight">关于 Victoria</h2>
           <p class="mt-8 text-lg text-zinc-800 leading-relaxed">
-            Victoria Tan 是一位经验丰富、亲和有度的专业主持人，拥有超过 12 年的舞台与镜头前经验。以温暖的个性、清晰的咬字与优雅的台风著称，能够与不同背景的观众建立连接，营造难忘时刻。
+            Victoria Tan 陈苛敏 是一位经验丰富、亲和有度的专业主持人，拥有超过 12 年的舞台与镜头前经验。以温暖的个性、清晰的咬字与优雅的台风著称，能够与不同背景的观众建立连接，营造难忘时刻。
           </p>
           <p class="mt-6 text-lg text-zinc-800 leading-relaxed">
-            从高规格礼宾仪式与企业发布会，到典雅婚礼与商业拍摄，Victoria 都能为现场注入活力与质感。其 <span class="font-semibold">电视主持、新闻采访与表演</span> 背景，亦让她的叙事更具层次与感染力。
+            从高规格礼宾仪式与企业发布会，到品牌盛典与商业拍摄，Victoria 都能为现场注入活力与质感。其 <span class="font-semibold">电视主持、新闻采访与表演</span> 背景，亦让她的叙事更具层次与感染力。
           </p>
           <p class="mt-6 text-lg text-zinc-800 leading-relaxed">
             无论是国际品牌晚宴、企业年会，或需要多语切换的婚礼现场（<span class="italic">中文、英语与马来语</span>），都能确保流程顺畅、礼仪到位与氛围得体，让每个重要时刻都被妥帖呈现。
@@ -382,7 +382,7 @@
         <div class="flex items-center gap-2 border-b border-line mb-6">
           <button type="button" data-tab="events" class="tab-btn px-4 py-2 rounded-t-md text-sm font-medium text-wordcolor border border-line border-b-transparent bg-white">企业与品牌活动</button>
           <button type="button" data-tab="tv" class="tab-btn px-4 py-2 rounded-t-md text-sm font-medium text-zinc-600 hover:text-wordcolor">电视与媒体</button>
-          <button type="button" data-tab="lifestyle" class="tab-btn px-4 py-2 rounded-t-md text-sm font-medium text-zinc-600 hover:text-wordcolor">节庆与生活方式</button>
+          <button type="button" data-tab="lifestyle" class="tab-btn px-4 py-2 rounded-t-md text-sm font-medium text-zinc-600 hover:text-wordcolor">节庆和婚礼</button>
           <div class="flex-1"></div>
         </div>
 
