--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
       <span>My Voice.</span>
       <!-- Mic icon -->
  <img src="assets/microphone2.svg" alt="" aria-hidden="true"
-           width="72" height="72" class="inline-block align-middle opacity-90"  decoding="async" fetchpriority="high">
+           width="72" height="72" class="inline-block align-middle opacity-90">
  
     </span>
   </span>
