--- a/index.html
+++ b/index.html
@@ -21,14 +21,17 @@
   <!-- <link rel="icon" href="https://emceevictoriatan.com/assets/logos/VT.png" type="image/png"> -->
 
 
-<link rel="preload" as="image" href="/assets/logos/hero1.webp" fetchpriority="high"> 
+<link rel="preload" as="image" href="/assets/hero1.webp" fetchpriority="high"> 
+<link rel="preload" as="image" href="/assets/2ndbg2.webp" fetchpriority="high"> 
 <link rel="preload" as="image" href="/assets/logos/victoria-tan-logo.webp" fetchpriority="high"> 
-<link rel="preload" as="image" href="/assets/portfolio/events/event-1.webp" fetchpriority="high">
-<link rel="preload" as="image" href="/assets/portfolio/events/event-2.webp" fetchpriority="high">
-<link rel="preload" as="image" href="/assets/portfolio/lifestyle/lifestyle-1.webp"fetchpriority="high">
-<link rel="preload" as="image" href="/assets/portfolio/lifestyle/lifestyle-2.webp"fetchpriority="high">
-<link rel="preload" as="image" href="/assets/portfolio/tv/tv-1.webp" fetchpriority="high">
-<link rel="preload" as="image" href="/assets/portfolio/tv/tv-2.webp" fetchpriority="high">
+<link rel="preload" as="image" href="/assets/corporate-beauty/corporate-beauty-1.webp" fetchpriority="high">
+<link rel="preload" as="image" href="/assets/corporate-beauty/corporate-beauty-2.webp" fetchpriority="high">
+<link rel="preload" as="image" href="/assets/wedding/wedding-1.webp"fetchpriority="high">
+<link rel="preload" as="image" href="/assets/wedding/wedding-2.webp"fetchpriority="high">
+<link rel="preload" as="image" href="/assets/protocol/protocol-1.webp" fetchpriority="high">
+<link rel="preload" as="image" href="/assets/protocol/protocol-2.webp" fetchpriority="high">
+<link rel="preload" as="image" href="/assets/corporate-tech/corporate-tech-1.webp" fetchpriority="high">
+<link rel="preload" as="image" href="/assets/corporate-tech/corporate-tech-2.webp" fetchpriority="high">
 
   <!-- Open Graph -->
   <meta property="og:type" content="website">
@@ -88,7 +91,7 @@
 <link rel="stylesheet" href="assets/styles/swiper-bundle.min.css"  media="print" onload="this.media='all'" />
 
 <link rel="stylesheet" href="mainstyle.css" media="print" onload="this.media='all'"  />
-
+  <script src="assets/scripts/swiper-bundle.min.js" defer></script>
 <noscript> 
   <link rel="stylesheet" href="/mainstyle.css">
   <link rel="stylesheet" href="/styles/swiper-bundle.min.css">
@@ -986,8 +989,7 @@
     </footer>
   </main>
 
-  <!-- Swiper JS + init after injection -->
-  <script src="assets/scripts/swiper-bundle.min.js" defer></script>
+  <!-- Swiper JS + init after injection --> 
   <script src="main.js"defer></script>
 
 
