--- a/index.html
+++ b/index.html
@@ -186,25 +186,34 @@
         <div class="grid lg:grid-cols-12 gap-8 items-end">
           <div class="lg:col-span-7">
             <!-- Replace image -->
-   <img src="./assets/hero1.webp" alt="Victoria Tan emceeing a corporate gala in Kuala Lumpur - trilingual host"
-     class="w-full object-cover object-center rounded-lg"
-     width="1600" height="900" decoding="async" fetchpriority="high">
+   <img
+  src="./assets/hero1.webp"
+  alt="Victoria Tan emceeing a corporate gala in Kuala Lumpur - trilingual host"
+  width="1600" height="900"
+  class="w-full h-auto object-cover object-center rounded-lg"
+  decoding="async" fetchpriority="high">
           </div>
           <div class="lg:col-span-5 pb-2 group">
 <h1 class="text-5xl md:text-7xl font-bolder tracking-tight text-wordcolor leading-tight">
   <span class="block">Your Event,</span>
-  <span class="block pl-[2ch] md:pl-0">
+ <span class="block pl-8 md:pl-0">
     <span class="inline-flex items-center gap-2">
       <span>My Voice.</span>
       <!-- Mic icon -->
- <img src="assets/microphone2.svg" alt="" aria-hidden="true"
-           width="72" height="72" class="inline-block align-middle opacity-90">
+<img
+  src="assets/microphone2.svg"
+  alt=""
+  aria-hidden="true"
+  role="presentation"
+  width="72" height="72"
+  class="inline-block align-middle"
+  decoding="async">
  
     </span>
   </span>
 </h1>
 
-        <p class="mt-4 text-base md:text-lg tracking-widest text-wordcolor/80 font-medium">
+        <p class="mt-4 text-base md:text-lg tracking-wide  text-wordcolor font-medium">
   Victoria Tan - Professional Malaysian TV Host & Emcee
 </p>
 
@@ -422,10 +431,9 @@
      <img
   src="assets/2ndbg2.webp?v=1"
   alt="Backstage / second main"
-  class="w-full object-cover rounded-xl"
-  loading="lazy"
-  decoding="async"
-  fetchpriority="low"
+  width="2400" height="1600"      
+  class="w-full h-auto object-cover rounded-xl"
+  loading="lazy" decoding="async" fetchpriority="low"
 />
     </div>
   </div>
