--- a/index.html
+++ b/index.html
@@ -77,9 +77,9 @@
 <script   src="preload.js" defer></script>
   <!-- Swiper (for sliders) -->
 <link rel="stylesheet" href="assets/styles/swiper-bundle.min.css"  media="print" onload="this.media='all'" />
-<link rel="stylesheet" href="mainstyle.css" media="print" onload="this.media='all'"  />
+<link rel="stylesheet" href="mainstyle.css?v=1" media="print" onload="this.media='all'"  />
 <noscript> 
-  <link rel="stylesheet" href="/mainstyle.css">
+  <link rel="stylesheet" href="/mainstyle.css?v=1">
   <link rel="stylesheet" href="/styles/swiper-bundle.min.css">
   <link rel="stylesheet" href="/dist/app.min.css">
 </noscript>
@@ -985,7 +985,7 @@
   </main>
 
   <!-- Swiper JS + init after injection --> 
-  <script src="main.js"defer></script>
+  <script src="main.js?v=1"defer></script>
 
   <script src="assets/scripts/swiper-bundle.min.js"></script>
 <script defer src="slide.js">
