--- a/index.html
+++ b/index.html
@@ -987,7 +987,7 @@
   <!-- Swiper JS + init after injection --> 
   <script src="main.js?v=1"defer></script>
 
-  <script src="assets/scripts/swiper-bundle.min.js"></script>
+  <script src="assets/scripts/swiper-bundle.min.js" defer></script>
 <script defer src="slide.js">
 
 </script>
