--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 
 
 </head>
-<body class="bg-canvas text-ink antialiased">
+<body class="text-ink antialiased">
     <!-- Page Preloader -->
 <div id="preloader" class="fixed inset-0 z-[9999] grid place-items-center bg-beige transition-opacity duration-500">
   <div class="flex flex-col items-center gap-5 px-6">
@@ -130,13 +130,13 @@
       </div>
     </div>
 
-    <div class="  flex items-center gap-5 md:order-4 md:ms-4">
+    <div class="  flex items-center gap-3 md:order-4 md:ms-4">
         <div id="lang-switch" class="flex items-center">
     <a href="index.html" data-lang="en"
-       class="px-2.5 py-1.5 text-xs rounded-full border border-line hover:bg-whisper transition whitespace-nowrap">EN</a>
+       class="px-1 py-1.5 text-xs rounded-full border border-line hover:bg-whisper transition whitespace-nowrap">EN</a>
     <span class="mx-1 text-zinc-400">/</span>
     <a href="index-zh.html" data-lang="zh"
-       class="px-2.5 py-1.5 text-xs rounded-full border border-line hover:bg-whisper transition whitespace-nowrap">中文</a>
+       class="px-1 py-1.5 text-xs rounded-full border border-line hover:bg-whisper transition whitespace-nowrap">中文</a>
   </div>
 
       <a class="w-full sm:w-auto whitespace-nowrap py-2 px-3 inline-flex justify-center items-center gap-x-2 text-sm font-medium rounded-full border border-transparent 
@@ -186,12 +186,12 @@
         <div class="grid lg:grid-cols-12 gap-8 items-end">
           <div class="lg:col-span-7">
             <!-- Replace image -->
-   <img
-  src="./assets/hero1.webp"
-  alt="Victoria Tan emceeing a corporate gala in Kuala Lumpur - trilingual host"
-  width="1600" height="900"
-  class="w-full h-auto object-cover object-center rounded-lg"
-  decoding="async" fetchpriority="high">
+  <img
+    src="./assets/hero1.webp"
+    alt="Victoria Tan emceeing a corporate gala in Kuala Lumpur - trilingual host"
+    width="1600" height="900"           
+    class="block w-full h-auto object-contain"    
+    decoding="async" fetchpriority="high">
           </div>
           <div class="lg:col-span-5 pb-2 group">
 <h1 class="text-5xl md:text-7xl font-bolder tracking-tight text-wordcolor leading-tight">
@@ -208,6 +208,7 @@
   width="72" height="72"
   class="inline-block align-middle"
   decoding="async">
+ 
  
     </span>
   </span>
