--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 
 
 </head>
-<body class="text-ink antialiased">
+<body>
     <!-- Page Preloader -->
 <div id="preloader" class="fixed inset-0 z-[9999] grid place-items-center bg-beige transition-opacity duration-500">
   <div class="flex flex-col items-center gap-5 px-6">
@@ -100,7 +100,7 @@
     </div>
 
     <!-- minimalist progress bar -->
-    <div class="w-48 h-[6px] rounded-full bg-white/60 overflow-hidden">
+    <div class="w-48 h-[6px] rounded-full /60 overflow-hidden">
       <div class="h-full w-1/3 bg-ink/80 animate-loader"></div>
     </div>
 
@@ -238,7 +238,7 @@
 
     </section>
 
-<section id="strengths" class="bg-white">
+<section id="strengths">
   <div class="max-w-6xl mx-auto px-4 sm:px-6 py-20">
     <!-- Heading -->
     <div class="mb-10 md:mb-14">
@@ -251,7 +251,7 @@
     <!-- Grid -->
     <div class="grid sm:grid-cols-2 lg:grid-cols-3 gap-5 sm:gap-6 lg:gap-8">
       <!-- Card -->
-      <article class="group p-6 rounded-2xl border border-line bg-white shadow-sm hover:shadow transition-shadow">
+      <article class="group p-6 rounded-2xl border border-line  shadow-sm hover:shadow transition-shadow">
         <div class="flex items-start gap-4">
           <span class="inline-flex items-center justify-center h-12 w-12 rounded-full bg-[rgba(61,93,125,0.08)]">
             <!-- Mic -->
@@ -268,7 +268,7 @@
         </div>
       </article>
 
-      <article class="group p-6 rounded-2xl border border-line bg-white shadow-sm hover:shadow transition-shadow">
+      <article class="group p-6 rounded-2xl border border-line  shadow-sm hover:shadow transition-shadow">
         <div class="flex items-start gap-4">
           <span class="inline-flex items-center justify-center h-12 w-12 rounded-full bg-[rgba(61,93,125,0.08)]">
             <!-- TV -->
@@ -286,7 +286,7 @@
         </div>
       </article>
 
-      <article class="group p-6 rounded-2xl border border-line bg-white shadow-sm hover:shadow transition-shadow">
+      <article class="group p-6 rounded-2xl border border-line  shadow-sm hover:shadow transition-shadow">
         <div class="flex items-start gap-4">
           <span class="inline-flex items-center justify-center h-12 w-12 rounded-full bg-[rgba(61,93,125,0.08)]">
             <!-- Language -->
@@ -305,7 +305,7 @@
         </div>
       </article>
 
-      <article class="group p-6 rounded-2xl border border-line bg-white shadow-sm hover:shadow transition-shadow">
+      <article class="group p-6 rounded-2xl border border-line  shadow-sm hover:shadow transition-shadow">
         <div class="flex items-start gap-4">
           <span class="inline-flex items-center justify-center h-12 w-12 rounded-full bg-[rgba(61,93,125,0.08)]">
             <!-- Globe -->
@@ -323,7 +323,7 @@
         </div>
       </article>
 
-      <article class="group p-6 rounded-2xl border border-line bg-white shadow-sm hover:shadow transition-shadow">
+      <article class="group p-6 rounded-2xl border border-line  shadow-sm hover:shadow transition-shadow">
         <div class="flex items-start gap-4">
           <span class="inline-flex items-center justify-center h-12 w-12 rounded-full bg-[rgba(61,93,125,0.08)]">
             <!-- News -->
@@ -341,7 +341,7 @@
         </div>
       </article>
 
-      <article class="group p-6 rounded-2xl border border-line bg-white shadow-sm hover:shadow transition-shadow">
+      <article class="group p-6 rounded-2xl border border-line  shadow-sm hover:shadow transition-shadow">
         <div class="flex items-start gap-4">
           <span class="inline-flex items-center justify-center h-12 w-12 rounded-full bg-[rgba(61,93,125,0.08)]">
             <!-- Masks -->
@@ -359,7 +359,7 @@
         </div>
       </article>
 
-      <article class="group p-6 rounded-2xl border border-line bg-white shadow-sm hover:shadow transition-shadow">
+      <article class="group p-6 rounded-2xl border border-line  shadow-sm hover:shadow transition-shadow">
         <div class="flex items-start gap-4">
           <span class="inline-flex items-center justify-center h-12 w-12 rounded-full bg-[rgba(61,93,125,0.08)]">
             <!-- Play -->
@@ -452,7 +452,7 @@
   </div>
 </section>
 
-    <section class="bg-white">
+    <section class="">
   <div class="max-w-6xl mx-auto px-6 lg:px-8 py-10">
      <h2 class="text-3xl md:text-4xl font-extrabold text-wordcolor tracking-tight">Clients & Partners</h2>
    
@@ -566,7 +566,7 @@
     <!-- Tabs -->
     <div class="flex items-center gap-2 border-b border-line mb-6">
       <button type="button" data-tab="events"
-              class="tab-btn px-4 py-2 rounded-t-md text-sm font-medium text-wordcolor border border-line border-b-transparent bg-white">
+              class="tab-btn px-4 py-2 rounded-t-md text-sm font-medium text-wordcolor border border-line border-b-transparent ">
         Corporate & Brand Events
       </button>
       <button type="button" data-tab="tv"
@@ -641,7 +641,7 @@
     </svg>
   </div>
 </section>
- <section id="video" class="bg-white">
+ <section id="video" class="">
   <div class="max-w-6xl mx-auto px-6 lg:px-8 py-16">
     <!-- Header -->
     <div class="flex flex-wrap items-baseline justify-between gap-3">
@@ -794,7 +794,7 @@
  
  
     <!-- 7) Contact - beige -->
-     <section id="contact" class="bg-white relative overflow-hidden">
+     <section id="contact" class=" relative overflow-hidden">
   <!-- soft background glow -->
   <div class="pointer-events-none absolute inset-0 opacity-60"
        style="background:
@@ -812,7 +812,7 @@
     <!-- Grid -->
     <div class="grid lg:grid-cols-5 gap-8">
       <!-- Left: Form card -->
-      <div class="lg:col-span-3 bg-white/90 backdrop-blur rounded-2xl border border-line shadow-[0_10px_30px_rgba(0,0,0,0.06)] p-6 md:p-8">
+      <div class="lg:col-span-3 /90 backdrop-blur rounded-2xl border border-line shadow-[0_10px_30px_rgba(0,0,0,0.06)] p-6 md:p-8">
         <form action="https://formspree.io/f/xpwjkkpk" method="POST" class="space-y-5">
           <!-- Hidden extras for nicer emails + anti-bot -->
           <input type="hidden" name="_subject" value="New inquiry from emceevictoriatan.com">
@@ -832,7 +832,7 @@
                   </svg>
                 </span>
                 <input name="name" autocomplete="name" required
-                       class="w-full border border-line bg-white rounded-lg pl-9 pr-3 py-2 focus:outline-none focus:ring-2 focus:ring-wordcolor/30">
+                       class="w-full border border-line  rounded-lg pl-9 pr-3 py-2 focus:outline-none focus:ring-2 focus:ring-wordcolor/30">
               </div>
             </label>
 
@@ -847,7 +847,7 @@
                   </svg>
                 </span>
                 <input type="email" name="email" autocomplete="email" required
-                       class="w-full border border-line bg-white rounded-lg pl-9 pr-3 py-2 focus:outline-none focus:ring-2 focus:ring-wordcolor/30">
+                       class="w-full border border-line  rounded-lg pl-9 pr-3 py-2 focus:outline-none focus:ring-2 focus:ring-wordcolor/30">
               </div>
             </label>
           </div>
@@ -864,7 +864,7 @@
                   </svg>
                 </span>
                 <input name="date" type="date"
-                       class="w-full border border-line bg-white rounded-lg pl-9 pr-3 py-2 focus:outline-none focus:ring-2 focus:ring-wordcolor/30">
+                       class="w-full border border-line  rounded-lg pl-9 pr-3 py-2 focus:outline-none focus:ring-2 focus:ring-wordcolor/30">
               </div>
             </label>
 
@@ -882,7 +882,7 @@
 
     <!-- select -->
     <select name="event_type"
-      class="w-full appearance-none border border-line bg-white rounded-lg
+      class="w-full appearance-none border border-line  rounded-lg
              pl-10 pr-10 py-2 h-10
              focus:outline-none focus:ring-2 focus:ring-wordcolor/30">
       <option>Protocol / Formal Ceremony</option>
@@ -906,16 +906,16 @@
           <label class="block">
             <span class="text-sm text-zinc-700">Message</span>
             <textarea name="message" rows="6" required
-                      class="mt-1 w-full border border-line bg-white rounded-lg px-3 py-2 focus:outline-none focus:ring-2 focus:ring-wordcolor/30"
+                      class="mt-1 w-full border border-line  rounded-lg px-3 py-2 focus:outline-none focus:ring-2 focus:ring-wordcolor/30"
                       placeholder="Event type, venue, program flow, audience size, languages, call time…"></textarea>
           </label>
 
           <div class="flex items-center justify-between flex-wrap gap-3">
             <!-- language chips -->
             <div class="flex flex-wrap gap-2">
-              <span class="text-xs px-2.5 py-1 rounded-full border border-line bg-white">EN</span>
-              <span class="text-xs px-2.5 py-1 rounded-full border border-line bg-white">中文</span>
-              <span class="text-xs px-2.5 py-1 rounded-full border border-line bg-white">BM</span>
+              <span class="text-xs px-2.5 py-1 rounded-full border border-line ">EN</span>
+              <span class="text-xs px-2.5 py-1 rounded-full border border-line ">中文</span>
+              <span class="text-xs px-2.5 py-1 rounded-full border border-line ">BM</span>
             </div>
             <button class="border border-line rounded-lg px-5 py-2.5 hover:bg-whisper transition">
               Send Inquiry
@@ -928,7 +928,7 @@
 
       <!-- Right: Direct contact + note -->
       <div class="lg:col-span-2 space-y-5">
-        <div class="bg-white/90 backdrop-blur rounded-2xl border border-line p-6 shadow-[0_10px_30px_rgba(0,0,0,0.04)]">
+        <div class="/90 backdrop-blur rounded-2xl border border-line p-6 shadow-[0_10px_30px_rgba(0,0,0,0.04)]">
           <h3 class="text-sm uppercase tracking-wider text-zinc-600">Quick Contact</h3>
           <div class="mt-4 space-y-4">
             <!-- Email only (no phone) -->
@@ -950,7 +950,7 @@
           </div>
         </div>
 
-        <div class="rounded-2xl border border-line p-6 bg-white/90 backdrop-blur">
+        <div class="rounded-2xl border border-line p-6 /90 backdrop-blur">
           <h4 class="text-sm uppercase tracking-wider text-zinc-600">What to include</h4>
           <ul class="mt-3 space-y-2 text-sm text-zinc-700 list-disc list-inside">
             <li>Event type &amp; date</li>
