--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
   <!-- (optional) png fallbacks -->
   <!-- <link rel="icon" href="https://emceevictoriatan.com/assets/logos/VT.png" type="image/png"> -->
 
-
-<link rel="preload" as="image" href="./assets/hero1.webp" fetchpriority="high">  
+<link rel="preload" as="image" href="./assets/hero1.webp" imagesrcset="./assets/hero1_mobile.webp 767w, ./assets/hero1.webp 1600w" imagesizes="100vw" fetchpriority="high">
+ 
   <!-- Open Graph -->
   <meta property="og:type" content="website">
   <meta property="og:site_name" content="Emcee Victoria Tan">
@@ -77,9 +77,9 @@
 <script   src="preload.js" defer></script>
   <!-- Swiper (for sliders) -->
 <link rel="stylesheet" href="assets/styles/swiper-bundle.min.css"  media="print" onload="this.media='all'" />
-<link rel="stylesheet" href="mainstyle.css?v=1" media="print" onload="this.media='all'"  />
+<link rel="stylesheet" href="mainstyle.css?v=2" media="print" onload="this.media='all'"  />
 <noscript> 
-  <link rel="stylesheet" href="/mainstyle.css?v=1">
+  <link rel="stylesheet" href="/mainstyle.css?v=12">
   <link rel="stylesheet" href="/styles/swiper-bundle.min.css">
   <link rel="stylesheet" href="/dist/app.min.css">
 </noscript>
@@ -186,12 +186,22 @@
         <div class="grid lg:grid-cols-12 gap-8 items-end">
           <div class="lg:col-span-7">
             <!-- Replace image -->
+<picture>
+  <!-- mobile first -->
+  <source
+    srcset="./assets/hero1_mobile.webp"
+    media="(max-width: 767.98px)"
+    type="image/webp" />
+
+  <!-- fallback / desktop -->
   <img
     src="./assets/hero1.webp"
     alt="Victoria Tan emceeing a corporate gala in Kuala Lumpur - trilingual host"
-    width="1600" height="900"           
-    class="block w-full h-auto object-contain"    
-    decoding="async" fetchpriority="high">
+    width="1600" height="900"          
+    class="block w-full h-auto object-contain rounded-lg"
+    decoding="async"
+    fetchpriority="high">
+</picture>
           </div>
           <div class="lg:col-span-5 pb-2 group">
 <h1 class="text-5xl md:text-7xl font-bolder tracking-tight text-wordcolor leading-tight">
@@ -429,13 +439,21 @@
 
     <div class="lg:col-span-7 order-1 lg:order-2">
       <!-- Replace image -->
-     <img
-  src="assets/2ndbg2.webp?v=1"
-  alt="Backstage / second main"
-  width="2400" height="1600"      
-  class="w-full h-auto object-cover rounded-xl"
-  loading="lazy" decoding="async" fetchpriority="low"
-/>
+ <picture>
+  <!-- mobile first -->
+  <source
+    srcset="assets/2ndbg2_mobile.webp?v=1"
+    media="(max-width: 767.98px)"
+    type="image/webp" />
+
+  <!-- desktop / default -->
+  <img
+    src="assets/2ndbg2.webp?v=1"
+    alt="Backstage / second main"
+    width="2400" height="1600"      
+    class="w-full h-auto object-cover rounded-xl"
+    loading="lazy" decoding="async">
+</picture>
     </div>
   </div>
 
