--- a/index.html
+++ b/index.html
@@ -195,22 +195,11 @@
         <div class="grid lg:grid-cols-12 gap-8 items-end">
           <div class="lg:col-span-7">
             <!-- Replace image -->
-<picture>
-  <!-- mobile first -->
-  <source
-    srcset="./assets/hero1_mobile.webp"
-    media="(max-width: 767.98px)"
-    type="image/webp" />
 
+  <!-- mobile first -->
+  <img src="./assets/hero1.webp" alt="Victoria Tan emceeing a corporate gala in Kuala Lumpur - trilingual host"  class="w-full object-cover object-center rounded-lg" width="1600" height="900" decoding="async" fetchpriority="high">
   <!-- fallback / desktop -->
-  <img
-    src="./assets/hero1.webp"
-    alt="Victoria Tan emceeing a corporate gala in Kuala Lumpur - trilingual host"       
-    class="object-contain rounded-lg"
-    
-    decoding="async"
-    fetchpriority="high">
-</picture>
+ 
           </div>
           <div class="lg:col-span-5 pb-2 group">
 <h1 class="text-5xl md:text-7xl font-bolder tracking-tight text-wordcolor leading-tight">
